@@ -1,3 +1,4 @@
+* Change Party.lang into Property
 * Add a list of identifier to party
 
 Version 3.6.0 - 2015-04-20
